packages/frontend/app/routes/trade/watchlist/watchlist.module.css
@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}
.watchListContainer {
    --svg-width-height: 25px;
    --svg-padding: 4.5px;

    width: 100%;
    height: 100%;
    display: flex;
    padding-left: var(--padding-s);
    border-radius: var(--radius-m);
    align-items: center;
    animation: fadeIn 0.1s ease;
    white-space: nowrap;
    /* this is to get it to lineup perfectly with symbolInfo */
    padding-left: var(--font-size-s);
}

.favIcon {
    color: var(--red);
    margin-right: var(--margin-s);
}

.watchListToolbarIcon {
    cursor: pointer;
    color: var(--text2);
    margin-left: var(--gap-s);
}

.watchListToolbarIcon.active {
    color: var(--text1);
}

.percentIcon {
    margin-right: var(--margin-s);
}

.watchListNodesWrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.watchListToolbarIcon,
.favIcon {
    padding: var(--svg-padding);
    border-radius: var(--radius-s);
    width: var(--svg-width-height);
    height: var(--svg-width-height);
}
.watchListToolbarIcon:hover,
.favIcon:hover {
    cursor: pointer;
    background: var(--bg-dark3);
}
.watchListLimitor {
    max-width: calc(
        100vw - var(--order-book-width-desktop-small) -
            var(--trade-module-width-desktop-small) - var(--gap-s) * 4 - 9.2rem
    );
}

.watchListLimitorNarrow {
    max-width: calc(
        100vw - var(--order-book-width-desktop-small) * 3 -
            var(--trade-module-width-desktop-small) - var(--gap-s) * 4 - 9.2rem
    );
}

@media only screen and (min-width: 1920px) {
    .watchListLimitor {
        max-width: calc(
            100vw - var(--order-book-width-desktop-large) -
                var(--trade-module-width-desktop-large) - var(--gap-s) * 4 -
                9.2rem
        );
    }

    .watchListLimitorNarrow {
        max-width: calc(
            100vw - var(--order-book-width-desktop-large) * 3 -
                var(--trade-module-width-desktop-large) - var(--gap-s) * 4 -
                9.2rem
        );
    }
}

@media only screen and (max-width: 1080px) {
    .watchListLimitor,
    .watchListLimitorNarrow {
        max-width: calc(100vw - var(--gap-s) * 4 - 8.2rem);
    }
}

